# sol

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
android-tv/: settings.gradle.kts
android-tv/app/: build.gradle.kts
android-tv/app/src/main/: AndroidManifest.xml
android-tv/app/src/main/assets/: android.addons.seed.json
android-tv/app/src/main/java/com/soltv/: MainActivity.kt
android-tv/app/src/main/java/com/soltv/bridge/: RustBridge.kt
android-tv/app/src/main/java/com/soltv/ui/: SolTvApp.kt
android-tv/app/src/main/res/values/: themes.xml
android-tv/scripts/: build-native-android.sh
capabilities/: default.json
src/: addons.rs  android_bridge.rs  api.rs  desktop.rs  domain.rs  lib.rs  main.rs  providers.rs  secrets.rs  services.rs  state.rs  storage.rs
