[package]
name = "sol"
version = "0.1.0"
edition = "2024"
description = "Desktop-first Rust media app starter inspired by Stremio."
default-run = "sol"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
axum = "0.8.1"
dirs = "6.0.0"
keyring = "3.6.1"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2" }
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
